--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -89,17 +89,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\NHibernateProfilerBootstrapper.cs" />
-    <Compile Include="Domain\Organisation\Ops\CsvExporter.cs" />
-    <Compile Include="Domain\Organisation\Organisation.cs" />
-    <Compile Include="Domain\Organisation\Persistence\OrganisationMap.cs" />
-    <Compile Include="Domain\Organisation\Persistence\OrganisationRepository.cs" />
-    <Compile Include="Domain\Organisation\Persistence\OrganisationSearchSpec.cs" />
+    <Compile Include="Domain\Search\GetTotals.cs" />
+    <Compile Include="Domain\Stakeholders\Club\Club.cs" />
+    <Compile Include="Domain\Stakeholders\Club\Persistence\ClubMap.cs" />
+    <Compile Include="Domain\Stakeholders\Club\Persistence\ClubRepository.cs" />
+    <Compile Include="Domain\Stakeholders\Club\Persistence\ClubSearchSpec.cs" />
+    <Compile Include="Domain\Stakeholders\Organisation\Ops\CsvExporter.cs" />
+    <Compile Include="Domain\Stakeholders\Organisation\Organisation.cs" />
+    <Compile Include="Domain\Stakeholders\Organisation\Persistence\OrganisationMap.cs" />
+    <Compile Include="Domain\Stakeholders\Organisation\Persistence\OrganisationRepository.cs" />
+    <Compile Include="Domain\Stakeholders\Organisation\Persistence\OrganisationSearchSpec.cs" />
     <Compile Include="Domain\Newsletter\Persistence\NewsletterMap.cs" />
     <Compile Include="Domain\Newsletter\Persistence\NewsletterRepository.cs" />
     <Compile Include="Domain\Newsletter\Newsletter.cs" />
-    <Compile Include="Domain\Person\Persistence\PersonMap.cs" />
-    <Compile Include="Domain\Person\Persistence\PersonRepository.cs" />
-    <Compile Include="Domain\Person\Person.cs" />
+    <Compile Include="Domain\Stakeholders\Person\Persistence\PersonMap.cs" />
+    <Compile Include="Domain\Stakeholders\Person\Persistence\PersonRepository.cs" />
+    <Compile Include="Domain\Stakeholders\Person\Person.cs" />
     <Compile Include="Domain\Search\Search.cs" />
     <Compile Include="Domain\Search\SearchResult.cs" />
     <Compile Include="Domain\Search\SearchResultItem.cs" />
@@ -147,6 +152,7 @@
     <Content Include="Tools\Updater\Scripts\1-initial.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Tools\Updater\Scripts\2-add-club-table.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
